"""create utilisateur

Revision ID: 9befbb06c26b
Revises: 
Create Date: 2026-01-10 20:52:57.545049

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = '9befbb06c26b'
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('utilisateurs',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('nom', sa.String(length=100), nullable=False),
    sa.Column('prenom', sa.String(length=100), nullable=False),
    sa.Column('email', sa.String(length=150), nullable=False),
    sa.Column('motDePasse', sa.String(length=255), nullable=False),
    sa.Column('role', sa.Enum('ADMIN', 'ENCADREUR', 'STAGIAIRE', name='roleenum'), nullable=False),
    sa.Column('actif', sa.Boolean(), nullable=True),
    sa.Column('emailVerifie', sa.Boolean(), nullable=True),
    sa.Column('dateCreation', sa.DateTime(), nullable=True),
    sa.Column('dateModification', sa.DateTime(), nullable=True),
    sa.Column('dernierLogin', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_utilisateurs_email'), 'utilisateurs', ['email'], unique=True)
    op.create_index(op.f('ix_utilisateurs_id'), 'utilisateurs', ['id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_utilisateurs_id'), table_name='utilisateurs')
    op.drop_index(op.f('ix_utilisateurs_email'), table_name='utilisateurs')
    op.drop_table('utilisateurs')
    # ### end Alembic commands ###
