"""create affectation

Revision ID: f305668c5a38
Revises: c6ebf18c15d1
Create Date: 2026-02-02 22:50:15.371294

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'f305668c5a38'
down_revision: Union[str, Sequence[str], None] = 'c6ebf18c15d1'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('affectations',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('demande_id', sa.Integer(), nullable=False),
    sa.Column('projet_id', sa.Integer(), nullable=False),
    sa.Column('encadreur_id', sa.Integer(), nullable=False),
    sa.Column('stagiaire_id', sa.Integer(), nullable=True),
    sa.Column('statut', sa.Enum('AFFECTEE', 'EN_COURS', 'COMPLETEE', 'ANNULEE', name='statutaffectationenum'), nullable=False),
    sa.Column('date_affectation', sa.DateTime(), nullable=False),
    sa.Column('date_debut_prevue', sa.DateTime(), nullable=True),
    sa.Column('date_fin_prevue', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.CheckConstraint('date_fin_prevue >= date_debut_prevue OR date_debut_prevue IS NULL', name='ck_affectation_dates_valid'),
    sa.ForeignKeyConstraint(['demande_id'], ['demandes_stage.id'], ),
    sa.ForeignKeyConstraint(['encadreur_id'], ['encadreurs.id'], ),
    sa.ForeignKeyConstraint(['projet_id'], ['projets.id'], ),
    sa.ForeignKeyConstraint(['stagiaire_id'], ['stagiaires.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_affectations_demande_id'), 'affectations', ['demande_id'], unique=False)
    op.create_index(op.f('ix_affectations_encadreur_id'), 'affectations', ['encadreur_id'], unique=False)
    op.create_index(op.f('ix_affectations_id'), 'affectations', ['id'], unique=False)
    op.create_index(op.f('ix_affectations_projet_id'), 'affectations', ['projet_id'], unique=False)
    op.create_index(op.f('ix_affectations_stagiaire_id'), 'affectations', ['stagiaire_id'], unique=False)
    op.create_table('evaluations',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('idStage', sa.Integer(), nullable=False),
    sa.Column('note', sa.Float(), nullable=False),
    sa.Column('contenu', sa.String(length=1000), nullable=False),
    sa.Column('dateEvaluation', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['idStage'], ['stages.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_index(op.f('ix_evaluations_id'), 'evaluations', ['id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_evaluations_id'), table_name='evaluations')
    op.drop_table('evaluations')
    op.drop_index(op.f('ix_affectations_stagiaire_id'), table_name='affectations')
    op.drop_index(op.f('ix_affectations_projet_id'), table_name='affectations')
    op.drop_index(op.f('ix_affectations_id'), table_name='affectations')
    op.drop_index(op.f('ix_affectations_encadreur_id'), table_name='affectations')
    op.drop_index(op.f('ix_affectations_demande_id'), table_name='affectations')
    op.drop_table('affectations')
    # ### end Alembic commands ###
