classDiagram
direction LR

class Utilisateur {
  +int id
  +String nom
  +String prenom
  +String email
  +String motDePasse
  +RoleEnum role
  +Boolean actif
  +Boolean emailVerifie
  +DateTime dateCreation
  +DateTime dateModification
  +DateTime dernierLogin
}

class Stagiaire {
  +String matricule
  +TypeStageEnum type_stage
  +StatutStageEnum statut_stage
  +Date date_debut_stage
  +Date date_fin_stage
  +String etablissement
  +String niveau_etude
  +int encadreur_id
  +DateTime date_validation
  +int note_finale
}

class Encadreur {
  +String matricule
  +GradeEnum grade
  +DepartementEnum departement
  +Boolean actif_encadrement
  +Boolean is_active
  +int max_stagiaires
  +nb_stagiaires_actuels() int
  +peut_prendre_stagiaire() bool
}

class ResetMotDePasse {
  +int id
  +int utilisateur_id
  +String token
  +DateTime date_creation
  +Date date_expiration
  +Boolean utilisee
}

class DemandeStage {
  +int id
  +String nom
  +String prenom
  +String email
  +String telephone
  +String etablissement
  +String niveau_etude
  +String departement_souhaite
  +Date date_debut_souhaitee
  +Date date_fin_souhaitee
  +JSON competences
  +JSON tags
  +StatutDemandeEnum statut
  +int encadreur_id
  +DateTime created_at
}

class DemandeStageStatusHistory {
  +int id
  +int demande_id
  +String previous_status
  +String new_status
  +Text reason
  +int changed_by
  +DateTime changed_at
}

class Projet {
  +int id
  +String code_projet
  +String intitule
  +DepartementEnum departement
  +TypeStageEnum type_stage
  +Text description
  +Text objectifs
  +Text livrables
  +String fiche_pdf_path
  +int duree_semaines
  +int charge_hebdo
  +NiveauEnum niveau_requis
  +JSON competences
  +JSON tags
  +int complexite
  +int priorite
  +ProjetStatusEnum status
  +int nombre_max_stagiaires
  +int encadreur_id
  +DateTime created_at
  +DateTime updated_at
}

class PropositionProjet {
  +int id
  +int demande_id
  +int projet_id
  +String token
  +DateTime date_expiration
  +StatutPropositionEnum statut
  +DateTime date_choix
  +DateTime created_at
}

class ChoixProjet {
  +int id
  +int demande_id
  +int projet_id
  +DateTime date_choix
  +DateTime created_at
}

class Affectation {
  +int id
  +int demande_id
  +int projet_id
  +int encadreur_id
  +int stagiaire_id
  +StatutAffectationEnum statut
  +DateTime date_affectation
  +DateTime date_debut_prevue
  +DateTime date_fin_prevue
  +DateTime created_at
  +DateTime updated_at
}

class Stage {
  +int id
  +int demandestage_id
  +int stagiaire_id
  +int encadreur_id
  +int projet_id
  +Date date_debut
  +Date date_fin
  +StatutStageEnum statut_stage
  +String texte_objectif
}

class Task {
  +int id
  +String title
  +Text description
  +int stage_id
  +int projet_id
  +int created_by
  +taskStatusEnum status
  +taskPriorityEnum priority
  +DateTime deadline
  +DateTime created_at
  +DateTime updated_at
}

class Task_submission {
  +int id
  +int task_id
  +int stagiaire_id
  +Text content
  +String file_url
  +DateTime submitted_at
}

class Evaluation {
  +int id
  +int stagiaire_id
  +int projet_id
  +int encadreur_id
  +int note
  +Text commentaire
  +DateTime created_at
  +DateTime updated_at
}

class PlanningEvent {
  +int id
  +int encadreur_id
  +int stagiaire_id
  +String title
  +Text description
  +planningEventTypeEnum event_type
  +taskPriorityEnum priority
  +String attendee_name
  +String location
  +DateTime start_at
  +DateTime end_at
  +DateTime created_at
  +DateTime updated_at
}

class Document {
  +int id
  +int demande_id
  +int user_id
  +DocumentTypeEnum type
  +String file_path
  +DateTime created_at
}

class DocumentReview {
  +int id
  +int document_id
  +String status
  +Text comment
  +int reviewed_by
  +DateTime reviewed_at
}

class MessageInterne {
  +int id
  +int id_expediteur
  +int id_destinataire
  +String sujet
  +String contenu
  +DateTime date_envoi
  +Boolean lu
}

class Notification {
  +int id
  +int user_id
  +String title
  +Text message
  +String category
  +Text payload
  +DateTime created_at
  +DateTime read_at
}

class Attestation {
  +int id
  +int stagiaire_id
  +int stage_id
  +int created_by
  +String numero_attestation
  +String file_path
  +DateTime date_debut_stage
  +DateTime date_fin_stage
  +Text description
  +DateTime created_at
  +DateTime updated_at
}

class Statistiques {
  +int id
  +String periode
  +int nombreDemandes
  +int nbrStagesvalides
  +int nbrStagesencours
  +float taxeReussite
}

Utilisateur <|-- Stagiaire
Utilisateur <|-- Encadreur

Utilisateur "1" o-- "0..*" ResetMotDePasse : reset_tokens
Utilisateur "1" o-- "0..*" Document : documents
Utilisateur "1" --> "0..*" Notification : recoit
Utilisateur "1" --> "0..*" MessageInterne : expediteur
Utilisateur "1" --> "0..*" MessageInterne : destinataire
Utilisateur "1" --> "0..*" Attestation : cree
Utilisateur "1" --> "0..*" DocumentReview : revise

Encadreur "1" --> "0..*" Stagiaire : encadre
Encadreur "1" --> "0..*" DemandeStage : traite
Encadreur "1" --> "0..*" Projet : propose
Encadreur "1" --> "0..*" Affectation : affecte
Encadreur "1" --> "0..*" Stage : supervise
Encadreur "1" --> "0..*" Task : cree
Encadreur "1" --> "0..*" Evaluation : saisit
Encadreur "1" --> "0..*" PlanningEvent : planifie

DemandeStage "1" o-- "0..*" Document : contient
DemandeStage "1" o-- "0..*" DemandeStageStatusHistory : historique
DemandeStage "1" --> "0..*" PropositionProjet : propositions
DemandeStage "1" --> "0..*" ChoixProjet : choix
DemandeStage "1" --> "0..*" Affectation : affectations
DemandeStage "1" --> "0..1" Stage : devient

Projet "1" --> "0..*" PropositionProjet : propose
Projet "1" --> "0..*" ChoixProjet : choisi
Projet "1" --> "0..*" Affectation : affectations
Projet "1" --> "0..*" Stage : realise
Projet "1" o-- "0..*" Task : taches
Projet "1" o-- "0..*" Evaluation : evaluations

Stagiaire "1" --> "0..*" Affectation : affectations
Stagiaire "1" --> "0..*" Stage : stages
Stagiaire "1" --> "0..*" Task_submission : soumissions
Stagiaire "1" o-- "0..*" Evaluation : evaluations
Stagiaire "1" o-- "0..*" Attestation : attestations
Stagiaire "1" --> "0..*" PlanningEvent : participe

Stage "1" o-- "0..*" Task : taches
Stage "1" o-- "0..*" Attestation : attestations

Task "1" --> "0..*" Task_submission : soumissions
Document "1" --> "0..*" DocumentReview : reviews
